# pi_school_project

./: Blockschaltplan1.drawio  Gewächshaussteuerung.docx  Gewächshaussteuerung2.odt  Gewächshaussteuerung_3.docx  Gewächshaussteuerung_Version4.2.docx  PAP_4_Woche.drawio  README.md  csv.py  database.py  inbetriebnahmeprotokoll.odt  lcd.py  light_sensor.py  main.py  matrix.py  pyproject.toml  relay.py  remote.txt  seven_seg.py  temp_humid_sensor.py
files/: Blockschaltplan1.drawio  Blockschaltplan8.drawio  Dokumentation  FI_LF7_Gewächshaussteuerung_Projektaufgabenstellung_20230823 (1).docx  Gewächshaussteuerung2.docx  PAP_8_Woche.drawio  TO_BE_FIXED.md  inbetriebnahmeprotokoll umgeschrieben.odt  inbetriebnahmeprotokoll.odt  remote.txt  struktog_2023-10-18.json
