[tool.poetry]
name = "py-school-project"
version = "0.1.0"
description = ""
authors = ["floork"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
adafruit-circuitpython-ht16k33 = "^4.6.6"
adafruit-circuitpython-charlcd = "^3.4.9"
rpi-gpio = "^0.7.1"
smbus = "^1.1.post2"
luma-core = "^2.4.1"
luma-lcd = "^2.11.0"
adafruit-circuitpython-dht = "^4.0.3"
luma-led-matrix = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
